# SME-IPO-listing-gains

./: Dockerfile  README.md  pyproject.toml
Data/: GMP_data.xlsx  clean_data.csv  financials_data.xlsx  listings_data.xlsx
Notebook/: clean.ipynb  notebook-Copy1.ipynb  notebook.ipynb
Scripts/: predict.py  streamlit_app.py  test.py  train.py
